replace Java 11 method with compatible method from Java 8